<resources>
    <string name="app_name">Trining1</string>
    <string name="enter_password">Enter password</string>
    <string name="password">Password</string>
    <string name="enter_your_username">Enter Your username</string>
    <string name="user_name">User Name</string>
    <string name="image_og_login">image og login</string>
    <string name="enter_your_massage">Enter your massage</string>
    <string name="add">ADD</string>
    <string name="name">name</string>
    <string name="massage">massage</string>
    <string name="shape">shape</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">\nusername\n</string>
    <string name="user">user</string>
    <string name="userName">usernametext</string>
    <string name="username1">userName</string>
</resources>