<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/img_item_userimage"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/txt_item_massage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/imgelogin"
        android:contentDescription="@string/shape" />

    <TextView
        android:id="@+id/txt_item_username"
        android:layout_width="0dp"
        android:layout_height="29dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:hint="@string/name"

        android:textColorHint="#8D6E63"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_item_userimage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_item_massage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/massage"
        android:textColorHint="#8D6E63"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_item_userimage"
        app:layout_constraintTop_toBottomOf="@+id/txt_item_username" />
</androidx.constraintlayout.widget.ConstraintLayout>